# ffmpeglearning

./: CMakeLists.txt  main.cpp  simple-mediadate.cpp  simple-mediadate.h  video.avi
